Frontend improvements (preparations for playlist)

--- a/tiptoe-api/src/main/resources/static/main.css
+++ b/tiptoe-api/src/main/resources/static/main.css
@@ -1,5 +1,9 @@
-#player div {
+#player div, #playlist div {
 	display: inline-block;
+}
+
+#player .controls, #playlist .controls {
+	vertical-align: text-bottom;
 }
 
 #player input {
