--- a/tiptoe-api/src/main/resources/static/main.css
+++ b/tiptoe-api/src/main/resources/static/main.css
@@ -3,7 +3,7 @@
 }
 
 #player .controls, #playlist .controls {
-	margin-left: 10px;
+	margin-left: 20px;
 	vertical-align: text-bottom;
 }
 
@@ -11,4 +11,8 @@
 	display: inline-block;
 	width: 100px;
 	margin-left: 20px;
+}
+
+#playlist .controls .search {
+	margin-left: 15px;
 }
